Restructure to DDD

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,10 @@
 PORT=8080
 APP_NAME=scrapper-server
+HADOOP_NODE_USER=HADOOP_USER-domain-user
+HADOOP_NODE_HOST=HADOOP_HOST-localhost
+HADOOP_HOST_PORT=HADOOP_PORT-50070
+MONGO_USER=scrapper-mongo
+MONGO_PASSWORD=YerbaMate420
+MONGO_HOST=scrapper.3cm2x.mongodb.net
+MONGO_PROTOCOL=mongodb+srv
+MONGO_DB=Scrapper
