--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.4",
+    "node-webhdfs": "^1.0.2",
     "process": "^0.11.10"
   },
   "devDependencies": {
