--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,4 @@ MONGO_PASSWORD=YerbaMate420
 MONGO_HOST=scrapper.3cm2x.mongodb.net
 MONGO_PROTOCOL=mongodb+srv
 MONGO_DB=Scrapper
+SENTRY_DSN=https://9e5e9130f57e461b8e42f0eddf06add8@o456866.ingest.sentry.io/5724685
