--- a/.env.dist
+++ b/.env.dist
@@ -4,8 +4,8 @@ HADOOP_NODE_USER=HADOOP_USER-domain-user
 HADOOP_NODE_HOST=HADOOP_HOST-localhost
 HADOOP_HOST_PORT=HADOOP_PORT-50070
 MONGO_USER=scrapper-mongo
-MONGO_PASSWORD=YerbaMate420
-MONGO_HOST=scrapper.3cm2x.mongodb.net
+MONGO_PASSWORD=Mongo-password
+MONGO_HOST=mongo-host
 MONGO_PROTOCOL=mongodb+srv
 MONGO_DB=Scrapper
-SENTRY_DSN=sentry-dsn
+SENTRY_DSN=https://9e5e9130f57e461b8e42f0eddf06add8@o456866.ingest.sentry.io/5724685
