--- a/.env.dist
+++ b/.env.dist
@@ -8,4 +8,4 @@ MONGO_PASSWORD=Mongo-password
 MONGO_HOST=mongo-host
 MONGO_PROTOCOL=mongodb+srv
 MONGO_DB=Scrapper
-SENTRY_DSN=https://9e5e9130f57e461b8e42f0eddf06add8@o456866.ingest.sentry.io/5724685
+SENTRY_DSN=sentry-dsn
