--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "mongoose": "^5.12.4",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
-    "node-webhdfs": "^1.0.2",
     "process": "^0.11.10",
-    "raven": "^2.6.4"
+    "raven": "^2.6.4",
+    "webhdfs": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
