--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,5 @@ MONGO_HOST=mongo-host
 MONGO_PROTOCOL=mongodb+srv
 MONGO_DB=Scrapper
 SENTRY_DSN=sentry-dsn
+PAGE_PARSER=default
+PAGE_LOCATION=https://www.jbzd.com.pl/
