Schedule to env

--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,4 @@ MONGO_DB=Scrapper
 SENTRY_DSN=sentry-dsn
 PAGE_PARSER=default
 PAGE_LOCATION=https://www.jbzd.com.pl/
+SURFER_SCHEDULE="*/5 */6 * * *"
