Schedule to env

--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,14 @@
-PORT=8080
-APP_NAME=scrapper-server
-HDFS_BIN=path-to-hadoop/bin/hadoop
-HDFS_NAMESPACE=/scrapper
-MONGO_USER=scrapper-mongo
-MONGO_PASSWORD=Mongo-password
-MONGO_HOST=mongo-host
-MONGO_PROTOCOL=mongodb+srv
-MONGO_DB=Scrapper
-SENTRY_DSN=sentry-dsn
-PAGE_PARSER=default
-PAGE_LOCATION=https://www.jbzd.com.pl/
+PORT="8080"
+APP_NAME="scrapper-server"
+HDFS_BIN="path-to-hadoop/bin/hadoop"
+HDFS_NAMESPACE="/scrapper"
+MONGO_USER="scrapper"
+MONGO_PASSWORD="Mongo-password"
+MONGO_HOST="mongo-host"
+MONGO_PROTOCOL="mongodb+srv"
+MONGO_DB="Scrapper"
+SENTRY_DSN="sentry-dsn"
+PAGE_PARSER="default"
+PAGE_LOCATION="https://www.jbzd.com.pl/"
 SURFER_SCHEDULE="*/5 */6 * * *"
+SENTRY_ON=true
