--- a/.env.dist
+++ b/.env.dist
@@ -9,6 +9,6 @@ MONGO_PROTOCOL="mongodb+srv"
 MONGO_DB="Scrapper"
 SENTRY_DSN="sentry-dsn"
 PAGE_PARSER="default"
-PAGE_LOCATION="https://www.jbzd.com.pl/"
+PAGE_LOCATION="https://www.jbzd.com.pl/top/dzien/"
 SURFER_SCHEDULE="*/5 */6 * * *"
 SENTRY_ON=true
