--- a/.env.dist
+++ b/.env.dist
@@ -8,7 +8,7 @@ MONGO_HOST="mongo-host"
 MONGO_PROTOCOL="mongodb+srv"
 MONGO_DB="Scrapper"
 SENTRY_DSN="sentry-dsn"
-PAGE_PARSER="default"
-PAGE_LOCATION="https://www.jbzd.com.pl/top/dzien"
 SURFER_SCHEDULE="*/5 */6 * * *"
 SENTRY_ON=true
+CACHE_DIR="_cache"
+PURGER_SCHEDULE="*/15 */2 * * *"
