--- a/src/infrastructure/parser/model/news/config.json
+++ b/src/infrastructure/parser/model/news/config.json
@@ -20,8 +20,7 @@
       },
       {
         "field": "thumbnail",
-        "selector": "img_small",
-        "parse": "addDomainToUrl"
+        "selector": "img_small"
       },
       {
         "field": "subscribersCount",
