--- a/src/infrastructure/parser/model/news/config.json
+++ b/src/infrastructure/parser/model/news/config.json
@@ -21,7 +21,7 @@
       },
       {
         "field": "thumbnail",
-        "selector": "img_small",
+        "selector": "img_small"
       },
       {
         "field": "subscribersCount",
