--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node src/ui/web/app.js",
     "dev": "nodemon",
-    "lint": "eslint .",
-    "spam": "node src/ui/command/spam.js"
+    "lint": "eslint . --fix",
+    "spam": "node src/ui/command/spam.js",
+    "doc": "jsdoc src -r -d docs"
   },
   "license": "MIT",
   "jest": {
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-protractor": "^2.1.1",
     "jest": "^26.6.3",
+    "jsdoc": "^3.6.6",
     "nodemon": "^2.0.7"
   },
   "_moduleAliases": {
